# standing-waves

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  dotclangd.sh
docs/: index.html  package-lock.json  package.json  tsup.config.ts
docs/src/: canvas.ts  index.ts  sidebar.ts  types.ts  util.ts
docs/src/render/: hexagonal.ts  points.ts  rectangular.ts  text.ts
docs/src/worker/: client.ts  server.js
docs/wasm/: standing_waves_em.js  standing_waves_em.wasm
src/: CMakeLists.txt  emscripten.cpp
src/cli/: main.cpp
src/lib/: matching_pursuit.cpp  matching_pursuit.h  standing_waves.cpp  standing_waves.h
test/: CMakeLists.txt
test/lib/: standing_waves_test.cpp
